# VinAuto

./: README.md
VinAuto_1.0/: README.md  pyproject.toml  setup.py
VinAuto_1.0/env/: vinauto_env.yml
VinAuto_1.0/virtual_screening/: clip.py  data_io.py  dock_box.py  docking.py  pipeline.py  utils.py
VinAuto_1.0/virtual_screening/converters/: clean_pdbqt.py  mol2_to_pdbqt.py  normalize_format.py  pdb_to_pdbqt.py  smiles_to_mol2.py
